--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
