--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-player": "^2.10.1",
+    "react-rich-text-editor": "^2.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
