--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.24.3",
+    "@editorjs/embed": "^2.5.1",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.4.1",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.1",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.2",
+    "@editorjs/warning": "^1.2.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@natterstefan/react-editor-js": "^0.3.1",
     "@popperjs/core": "^2.11.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -20,10 +38,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
+    "react-editor-js": "^2.0.6",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-player": "^2.10.1",
-    "react-rich-text-editor": "^2.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
