--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
+    "form-data": "^4.0.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
